# real-time-stock-streaming-pipeline

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml  requirements-dashboard.txt  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: stock_streaming_quality_dag.py
config/: topics.yml
dashboard/: streamlit_app.py
docs/: DEMO_EVIDENCE.md  OPERATIONS.md  SNOWFLAKE_VALIDATION.md
scripts/: create_topics.py  run_local.ps1  start_demo.ps1  submit_streaming_job.ps1  validate_snowflake.py
snowflake/: 01_setup.sql  02_streams_tasks.sql  kafka_connector.properties.template
spark/: batch_backfill_job.py  stock_streaming_job.py
src/stock_streaming_pipeline/: __init__.py  anomaly.py  events.py  lag_monitor.py  producer.py  settings.py
tests/: test_anomaly.py  test_events.py
