[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-streaming-pipeline"
version = "0.1.0"
description = "Real-time stock market event streaming pipeline with Kafka, Spark Structured Streaming, Delta Lake, and Snowflake assets."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Wumerouno" }]
dependencies = [
  "confluent-kafka>=2.4.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
streaming = [
  "pyspark>=3.5.1",
  "delta-spark>=3.2.0",
]
dashboard = [
  "streamlit>=1.36.0",
  "pandas>=2.2.0",
  "plotly>=5.22.0",
  "deltalake>=0.18.0",
]
snowflake = [
  "snowflake-connector-python>=3.11.0",
]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
stock-producer = "stock_streaming_pipeline.producer:main"
stock-lag-monitor = "stock_streaming_pipeline.lag_monitor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
